Isidios de nazaret

--- a/frontend/templates/frontend.html
+++ b/frontend/templates/frontend.html
@@ -9,10 +9,10 @@
     
 </head>
 <body>
-    <header>
+    ñ<header>
         <nav>
             <a href="#">Inicio</a>
-            <img src="{% static  'img_01'%}" alt="">
+            <img src="{% static  'img_01.png'%}" alt="">
 
         </nav>
     </header>
